SAK-17545 prep for indie release in support of SiteStats 2.1 release.
git-svn-id: https://source.sakaiproject.org/svn/jobscheduler/trunk@69664 66ffb92e-73f9-0310-93c1-f5514f145a0a